--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk+" version="3.24"/>
   <requires lib="libhandy" version="1.0"/>
   <template class="PrefsWindow" parent="HdyPreferencesWindow">
-    <property name="default_height">520</property>
-    <property name="default_width">480</property>
+    <property name="default_height">480</property>
+    <property name="default_width">540</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="search-enabled">False</property>
@@ -20,27 +20,15 @@
             <property name="title" translatable="yes">Behavior</property>
             <child>
               <object class="HdyComboRow" id="on_start_combo">
-                <property name="title" translatable="yes">When Wike starts load</property>
+                <property name="title" translatable="yes">Home page</property>
+                <property name="subtitle" translatable="yes">The page that will be displayed when Wike starts</property>
                 <property name="visible">True</property>
               </object>
             </child>
             <child>
               <object class="HdyActionRow">
-                <property name="title" translatable="yes">Keep a list of recent articles</property>
-                <property name="visible">True</property>
-                <property name="activatable_widget">historic_switch</property>
-                <child>
-                  <object class="GtkSwitch" id="historic_switch">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="HdyActionRow">
-                <property name="title" translatable="yes">Clear bookmarks list on exit</property>
+                <property name="title" translatable="yes">Clear bookmarks on exit</property>
+                <property name="subtitle" translatable="yes">The bookmarks list will be cleared when exiting Wike</property>
                 <property name="visible">True</property>
                 <property name="activatable_widget">clear_bookmarks_switch</property>
                 <child>
@@ -58,10 +46,11 @@
           <object class="HdyPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Appearance</property>
+            <property name="title" translatable="yes">Article View</property>
             <child>
               <object class="HdyActionRow">
-                <property name="title" translatable="yes">Font size for articles</property>
+                <property name="title" translatable="yes">Font size</property>
+                <property name="subtitle" translatable="yes">Font size for article view (default is 16)</property>
                 <property name="visible">True</property>
                 <property name="activatable">False</property>
                 <child>
@@ -78,7 +67,8 @@
             </child>
             <child>
               <object class="HdyComboRow" id="custom_font_combo">
-                <property name="title" translatable="yes">Use custom font for articles</property>
+                <property name="title" translatable="yes">Use custom font</property>
+                <property name="subtitle" translatable="yes">Choose a font for the article view</property>
                 <property name="visible">True</property>
                 <child type="prefix">
                   <object class="GtkSwitch" id="custom_font_switch">
@@ -91,11 +81,63 @@
             </child>
             <child>
               <object class="HdyActionRow">
-                <property name="title" translatable="yes">Show preview popups in article links</property>
+                <property name="title" translatable="yes">Preview popups in article links</property>
+                <property name="subtitle" translatable="yes">Show a preview of the article when hovering over a link</property>
                 <property name="visible">True</property>
                 <property name="activatable_widget">preview_popups_switch</property>
                 <child>
                   <object class="GtkSwitch" id="preview_popups_switch">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="HdyPreferencesPage">
+        <property name="visible">True</property>
+        <property name="title" translatable="yes">Privacy</property>
+        <property name="icon_name">preferences-system-privacy-symbolic</property>
+        <child>
+          <object class="HdyPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="title" translatable="yes">Search</property>
+            <child>
+              <object class="HdyActionRow">
+                <property name="title" translatable="yes">Allow live search on desktop</property>
+                <property name="subtitle" translatable="yes">Warning: all desktop searches will be sent to Wikipedia</property>
+                <property name="visible">True</property>
+                <property name="activatable_widget">desktop_search_switch</property>
+                <child>
+                  <object class="GtkSwitch" id="desktop_search_switch">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="HdyPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="title" translatable="yes">Personal Data</property>
+            <child>
+              <object class="HdyActionRow">
+                <property name="title" translatable="yes">Keep a list of recent articles</property>
+                <property name="subtitle" translatable="yes">Wike will remember the history of visited articles</property>
+                <property name="visible">True</property>
+                <property name="activatable_widget">historic_switch</property>
+                <child>
+                  <object class="GtkSwitch" id="historic_switch">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="valign">center</property>
